--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -108,8 +108,6 @@
         - name: Ta bort ett AKS-kluster
           href: '/cli/azure/aks#az-aks-delete'
           maintainContext: true
-        - name: Azure AD-aktiverad AKS
-          href: aad-integration.md
         - name: Skapa virtuella noder (förhandsversion)
           items:
             - name: Azure CLI
@@ -172,8 +170,18 @@
           href: control-kubeconfig-access.md
         - name: Skydda podtrafik med nätverksprinciper (förhandsversion)
           href: use-network-policies.md
+        - name: Använda säkerhetsprinciper för poddar (förhandsversion)
+          href: use-pod-security-policies.md
         - name: Uppdatera autentiseringsuppgifterna för tjänstens huvudnamn i klustret
           href: update-credentials.md
+        - name: Aktivera Azure Active Directory-integrering
+          items:
+            - name: Använda Azure CLI
+              href: azure-ad-integration-cli.md
+            - name: Använda Azure-portalen
+              href: azure-ad-integration.md
+        - name: Använda Kubernetes RBAC med Azure AD-integrering
+          href: azure-ad-rbac.md
         - name: Autentisera med ACR
           href: ../container-registry/container-registry-auth-aks.md
           maintainContext: true
