--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -1,246 +1,243 @@
-items:
 - name: Dokumentation om Application Gateway
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Application Gateway
-    href: overview.md
-  - name: Nyheter
-    href: whats-new.md
+    - name: Om Application Gateway
+      href: overview.md
+    - name: Nyheter
+      href: whats-new.md
 - name: Snabbstarter
-  items:
-  - name: Skapa Application Gateway – portalen
-    href: quick-create-portal.md
-  - name: Skapa Application Gateway – PowerShell
-    href: quick-create-powershell.md
-  - name: Skapa Application Gateway – Azure CLI
-    href: quick-create-cli.md
   expanded: true
+  items:
+    - name: Skapa Application Gateway – portalen
+      href: quick-create-portal.md
+    - name: Skapa Application Gateway – PowerShell
+      href: quick-create-powershell.md
+    - name: Skapa Application Gateway – Azure CLI
+      href: quick-create-cli.md
 - name: Självstudier
   items:
-  - name: Aktivera brandvägg för webbaserade program
-    href: application-gateway-web-application-firewall-portal.md
-  - name: Skydda med SSL
-    href: create-ssl-portal.md
-  - name: Tillhandahåll värdtjänster för flera webbplatser
-    href: create-multiple-sites-portal.md
-  - name: Dirigera efter URL
-    href: create-url-route-portal.md
-  - name: Omdirigera webbtrafik
-    href: tutorial-url-redirect-cli.md
-  - name: Automatisk skalning och zonredundans
-    href: tutorial-autoscale-ps.md
+    - name: Aktivera brandvägg för webbaserade program
+      href: application-gateway-web-application-firewall-portal.md
+    - name: Skydda med SSL
+      href: create-ssl-portal.md
+    - name: Tillhandahåll värdtjänster för flera webbplatser
+      href: create-multiple-sites-portal.md
+    - name: Dirigera efter URL
+      href: create-url-route-portal.md
+    - name: Omdirigera webbtrafik
+      href: tutorial-url-redirect-cli.md
+    - name: Automatisk skalning och zonredundans
+      href: tutorial-autoscale-ps.md
 - name: Exempel
   items:
-  - name: Azure PowerShell
-    href: powershell-samples.md
-  - name: Azure CLI
-    href: cli-samples.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
+    - name: Azure CLI
+      href: cli-samples.md
 - name: Begrepp
   items:
-  - name: Grundläggande inställningar
-    items:
-    - name: Så här fungerar Application Gateway
-      href: how-application-gateway-works.md
-    - name: Application Gateway-komponenter
-      href: application-gateway-components.md
-    - name: Översikt över konfiguration
-      href: configuration-overview.md
-  - name: Routning
-    items:
-    - name: Värdtjänster för flera webbplatser
-      href: multiple-site-overview.md
-    - name: URL-routning
-      href: url-route-overview.md
-    - name: Omdirigering
-      href: redirect-overview.md
-    - name: Återskapa HTTP-huvuden
-      href: rewrite-http-headers.md
-    - name: Anpassade felsidor
-      href: custom-error.md
-  - name: SSL
-    items:
-    - name: SSL-avslut och slutpunkt till slutpunkt över SSL
-      href: ssl-overview.md
-    - name: Översikt över SSL-princip
-      href: application-gateway-ssl-policy-overview.md
-  - name: Brandvägg för webbaserade program
-    items:
+    - name: Grundläggande inställningar
+      items:
+        - name: Så här fungerar Application Gateway
+          href: how-application-gateway-works.md
+        - name: Application Gateway-komponenter
+          href: application-gateway-components.md
+        - name: Översikt över konfiguration
+          href: configuration-overview.md
+    - name: Routning
+      items:
+        - name: Värdtjänster för flera webbplatser
+          href: multiple-site-overview.md
+        - name: URL-routning
+          href: url-route-overview.md
+        - name: Omdirigering
+          href: redirect-overview.md
+        - name: Återskapa HTTP-huvuden
+          href: rewrite-http-headers.md
+        - name: Anpassade felsidor
+          href: custom-error.md
+    - name: SSL
+      items:
+        - name: SSL-avslut och slutpunkt till slutpunkt över SSL
+          href: ssl-overview.md
+        - name: Översikt över SSL-princip
+          href: application-gateway-ssl-policy-overview.md
+        - name: Använda Key Vault
+          href: key-vault-certs.md
     - name: Brandvägg för webbaserade program
-      href: waf-overview.md
-    - name: WAF-konfiguration
-      href: application-gateway-waf-configuration.md
-  - name: Hälsoövervakning
-    items:
-    - name: Hälsoavsökning
-      href: application-gateway-probe-overview.md
-    - name: Diagnostik
-      href: application-gateway-diagnostics.md
-  - name: Automatisk skalning och zonredundans
-    href: application-gateway-autoscaling-zone-redundant.md
-  - name: App Service-webbapp och stöd för flera innehavare
-    href: application-gateway-web-app-overview.md
-  - name: WebSocket-stöd
-    href: application-gateway-websocket.md
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: application-gateway-faq.md
+      items:
+        - name: Brandvägg för webbaserade program
+          href: waf-overview.md
+        - name: WAF-konfiguration
+          href: application-gateway-waf-configuration.md
+    - name: Hälsoövervakning
+      items:
+        - name: Hälsoavsökning
+          href: application-gateway-probe-overview.md
+        - name: Diagnostik
+          href: application-gateway-diagnostics.md
+    - name: Automatisk skalning och zonredundans
+      href: application-gateway-autoscaling-zone-redundant.md
+    - name: App Service-webbapp och stöd för flera innehavare
+      href: application-gateway-web-app-overview.md
+    - name: WebSocket-stöd
+      href: application-gateway-websocket.md
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: application-gateway-faq.md
 - name: Instruktionsguider
   items:
-  - name: Agera värd åt en enskild webbplats
-    items:
-    - name: Azure PowerShell
-      href: tutorial-manage-web-traffic-powershell.md
-    - name: Azure CLI
-      href: tutorial-manage-web-traffic-cli.md
-    - name: Mall
-      href: create-vmss-template.md
-  - name: Konfigurera intern lastbalanserare
-    items:
-    - name: Azure Portal
-      href: configure-application-gateway-with-private-frontend-ip.md
-    - name: Azure PowerShell
-      href: application-gateway-ilb-arm.md
-  - name: Konfigurera SSL
-    items:
-    - name: SSL-avslutning
+    - name: Agera värd åt en enskild webbplats
       items:
-      - name: SSL-avslutning – PowerShell
-        href: tutorial-ssl-powershell.md
-      - name: SSL-avslutning – Azure CLI
-        href: tutorial-ssl-cli.md
-    - name: SSL från slutpunkt till slutpunkt
+        - name: Azure PowerShell
+          href: tutorial-manage-web-traffic-powershell.md
+        - name: Azure CLI
+          href: tutorial-manage-web-traffic-cli.md
+        - name: Mall
+          href: create-vmss-template.md
+    - name: Konfigurera intern lastbalanserare
       items:
-      - name: Slutpunkt till slutpunkt för SSL – portalen
-        href: end-to-end-ssl-portal.md
-      - name: Slutpunkt till slutpunkt för SSL – PowerShell
-        href: application-gateway-end-to-end-ssl-powershell.md
-    - name: Hantera certifikat
+        - name: Azure Portal
+          href: configure-application-gateway-with-private-frontend-ip.md
+        - name: Azure PowerShell
+          href: application-gateway-ilb-arm.md
+    - name: Konfigurera SSL
       items:
-      - name: Skapa certifikat för serverdel för lista över tillåtna
-        href: certificates-for-backend-authentication.md
-      - name: Förnya certifikat
-        href: renew-certificates.md
-    - name: SSL-princip
+        - name: SSL-avslutning
+          items:
+            - name: SSL-avslutning – PowerShell
+              href: tutorial-ssl-powershell.md
+            - name: SSL-avslutning – Azure CLI
+              href: tutorial-ssl-cli.md
+            - name: Konfigurera Key Vault – PowerShell
+              href: configure-keyvault-ps.md
+        - name: SSL från slutpunkt till slutpunkt
+          items:
+            - name: Slutpunkt till slutpunkt för SSL – portalen
+              href: end-to-end-ssl-portal.md
+            - name: Slutpunkt till slutpunkt för SSL – PowerShell
+              href: application-gateway-end-to-end-ssl-powershell.md
+        - name: Hantera certifikat
+          items:
+            - name: Skapa certifikat för serverdel för lista över tillåtna
+              href: certificates-for-backend-authentication.md
+            - name: Förnya certifikat
+              href: renew-certificates.md
+        - name: SSL-princip
+          items:
+            - name: Konfigurera SSL-princip
+              href: application-gateway-configure-ssl-policy-powershell.md
+    - name: Konfigurera brandväggen för webbappar
       items:
-      - name: Konfigurera SSL-princip
-        href: application-gateway-configure-ssl-policy-powershell.md
-  - name: Konfigurera brandväggen för webbappar
-    items:
-    - name: Azure PowerShell
-      href: tutorial-restrict-web-traffic-powershell.md
-    - name: Azure CLI
-      href: tutorial-restrict-web-traffic-cli.md
-  - name: Konfigurera WAF-regeluppsättningar
-    items:
-    - name: Azure Portal
-      href: application-gateway-customize-waf-rules-portal.md
-    - name: Azure PowerShell
-      href: application-gateway-customize-waf-rules-powershell.md
-    - name: Azure CLI
-      href: application-gateway-customize-waf-rules-cli.md
-  - name: Dirigera efter URL
-    items:
-    - name: Azure PowerShell
-      href: tutorial-url-route-powershell.md
-    - name: Azure CLI
-      href: tutorial-url-route-cli.md
-  - name: Tillhandahåll värdtjänster för flera webbplatser
-    items:
-    - name: Azure PowerShell
-      href: tutorial-multiple-sites-powershell.md
-    - name: Azure CLI
-      href: tutorial-multiple-sites-cli.md
-  - name: Omdirigera trafik
-    items:
-    - name: Extern trafik
+        - name: Azure PowerShell
+          href: tutorial-restrict-web-traffic-powershell.md
+        - name: Azure CLI
+          href: tutorial-restrict-web-traffic-cli.md
+    - name: Konfigurera WAF-regeluppsättningar
       items:
-      - name: Azure PowerShell
-        href: redirect-external-site-powershell.md
-      - name: Azure CLI
-        href: redirect-external-site-cli.md
-    - name: HTTP till HTTPS
+        - name: Azure Portal
+          href: application-gateway-customize-waf-rules-portal.md
+        - name: Azure PowerShell
+          href: application-gateway-customize-waf-rules-powershell.md
+        - name: Azure CLI
+          href: application-gateway-customize-waf-rules-cli.md
+    - name: Dirigera efter URL
       items:
-      - name: Azure Portal
-        href: redirect-http-to-https-portal.md
-      - name: Azure PowerShell
-        href: redirect-http-to-https-powershell.md
-      - name: Azure CLI
-        href: redirect-http-to-https-cli.md
-    - name: Omdirigera intern trafik
+        - name: Azure PowerShell
+          href: tutorial-url-route-powershell.md
+        - name: Azure CLI
+          href: tutorial-url-route-cli.md
+    - name: Tillhandahåll värdtjänster för flera webbplatser
       items:
-      - name: Azure PowerShell
-        href: redirect-internal-site-powershell.md
-      - name: Azure CLI
-        href: redirect-internal-site-cli.md
-    - name: Omdirigera webbtrafik med hjälp av Azure PowerShell
-      href: tutorial-url-redirect-powershell.md
-  - name: Återskapa HTTP-huvuden
-    items:
-    - name: Azure Portal
-      href: rewrite-http-headers-portal.md
-    - name: Azure PowerShell
-      href: add-http-header-rewrite-rule-powershell.md
-  - name: Konfigurera App Service-webbapp och tjänst för flera innehavare
-    items:
-    - name: Portalen
-      href: configure-web-app-portal.md
-    - name: Azure PowerShell
-      href: create-web-app.md
-  - name: Konfigurera anpassade avsökningar
-    items:
-    - name: Portalen
-      href: application-gateway-create-probe-portal.md
-    - name: Klassiska PowerShell
-      href: application-gateway-create-probe-classic-ps.md
-    - name: Resource Manager PowerShell
-      href: application-gateway-create-probe-ps.md
-  - name: Felsöka
-    items:
-    - name: ILB med en App Service-miljö
-      href: create-gateway-internal-load-balancer-app-service-environment.md
-    - name: Omdirigering till App Service-URL
-      href: troubleshoot-app-service-redirection-app-service-url.md
-    - name: Problem med sessionstillhörighet
-      href: how-to-troubleshoot-application-gateway-session-affinity-issues.md
-    - name: Fel med felaktig gateway (502)
-      href: application-gateway-troubleshooting-502.md
+        - name: Azure PowerShell
+          href: tutorial-multiple-sites-powershell.md
+        - name: Azure CLI
+          href: tutorial-multiple-sites-cli.md
+    - name: Omdirigera trafik
+      items:
+        - name: Extern trafik
+          items:
+            - name: Azure PowerShell
+              href: redirect-external-site-powershell.md
+            - name: Azure CLI
+              href: redirect-external-site-cli.md
+        - name: HTTP till HTTPS
+          items:
+            - name: Azure Portal
+              href: redirect-http-to-https-portal.md
+            - name: Azure PowerShell
+              href: redirect-http-to-https-powershell.md
+            - name: Azure CLI
+              href: redirect-http-to-https-cli.md
+        - name: Omdirigera intern trafik
+          items:
+            - name: Azure PowerShell
+              href: redirect-internal-site-powershell.md
+            - name: Azure CLI
+              href: redirect-internal-site-cli.md
+        - name: Omdirigera webbtrafik med hjälp av Azure PowerShell
+          href: tutorial-url-redirect-powershell.md
+    - name: Återskapa HTTP-huvuden
+      items:
+        - name: Azure Portal
+          href: rewrite-http-headers-portal.md
+        - name: Azure PowerShell
+          href: add-http-header-rewrite-rule-powershell.md
+    - name: Konfigurera App Service-webbapp och tjänst för flera innehavare
+      items:
+        - name: Portalen
+          href: configure-web-app-portal.md
+        - name: Azure PowerShell
+          href: create-web-app.md
+    - name: Konfigurera anpassade avsökningar
+      items:
+        - name: Portalen
+          href: application-gateway-create-probe-portal.md
+        - name: Klassiska PowerShell
+          href: application-gateway-create-probe-classic-ps.md
+        - name: Resource Manager PowerShell
+          href: application-gateway-create-probe-ps.md
+    - name: Felsöka
+      items:
+        - name: ILB med en App Service-miljö
+          href: create-gateway-internal-load-balancer-app-service-environment.md
+        - name: Omdirigering till App Service-URL
+          href: troubleshoot-app-service-redirection-app-service-url.md
+        - name: Problem med sessionstillhörighet
+          href: how-to-troubleshoot-application-gateway-session-affinity-issues.md
+        - name: Fel med felaktig gateway (502)
+          href: application-gateway-troubleshooting-502.md
 - name: Referens
   items:
-  - name: CRS-regler
-    href: application-gateway-crs-rulegroups-rules.md
-  - name: Azure CLI
-    href: /cli/azure/network/application-gateway
-  - name: Azure PowerShell
-    href: /powershell/azure/overview
-  - name: .NET
-    href: /dotnet/api
-  - name: Java
-    href: /java/api
-  - name: Node.js
-    href: https://azure.microsoft.com/develop/nodejs/#azure-sdk
-  - name: Python
-    href: https://azure.microsoft.com/develop/python/
-  - name: REST
-    href: /rest/api/applicationgateway
-  - name: Azure Resource Manager
-    href: ../azure-resource-manager/resource-group-overview.md
+    - name: CRS-regler
+      href: application-gateway-crs-rulegroups-rules.md
+    - name: Azure CLI
+      href: /cli/azure/network/application-gateway
+    - name: Azure PowerShell
+      href: /powershell/azure/overview
+    - name: .NET
+      href: /dotnet/api
+    - name: Java
+      href: /java/api
+    - name: Node.js
+      href: 'https://azure.microsoft.com/develop/nodejs/#azure-sdk'
+    - name: Python
+      href: 'https://azure.microsoft.com/develop/python/'
+    - name: REST
+      href: /rest/api/applicationgateway
+    - name: Azure Resource Manager
+      href: ../azure-resource-manager/resource-group-overview.md
 - name: Resurser
   items:
-  - name: Skapa mallar
-    href: ../azure-resource-manager/resource-group-authoring-templates.md
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Community-mallar
-    href: https://azure.microsoft.com/documentation/templates
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/#Linux
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-application-gateway
-ms.openlocfilehash: 26ec063b5ad05325eb654a3b112eb5dd6ef23bcc
-ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/13/2019
-ms.locfileid: "59547388"
+    - name: Skapa mallar
+      href: ../azure-resource-manager/resource-group-authoring-templates.md
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Community-mallar
+      href: 'https://azure.microsoft.com/documentation/templates'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/#Linux'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-application-gateway'
