--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -1,68 +1,66 @@
-items:
 - name: Azure Resource Graph-dokumentation
   href: index.yml
 - name: Översikt
   items:
-  - name: Översikt över Azure Resource Graph
-    displayName: resource manager, query language, rbac, permissions
-    href: overview.md
+    - name: Översikt över Azure Resource Graph
+      displayName: 'resource manager, query language, rbac, permissions'
+      href: overview.md
 - name: Snabbstarter
-  items:
-  - name: Kör din första fråga – Azure CLI
-    displayName: extension, docker
-    href: first-query-azurecli.md
-  - name: Kör din första fråga – PowerShell
-    displayName: module, docker, Az.ResourceGraph
-    href: first-query-powershell.md
   expanded: true
+  items:
+    - name: Kör din första fråga – Azure CLI
+      displayName: 'extension, docker'
+      href: first-query-azurecli.md
+    - name: Kör din första fråga – PowerShell
+      displayName: 'module, docker, Az.ResourceGraph'
+      href: first-query-powershell.md
 - name: Exempel
-  items:
-  - name: Startfrågor
-    displayName: query language, data explorer, count, list, show
-    href: ./samples/starter.md
-  - name: Avancerade frågor
-    displayName: query language, data explorer, list, regex
-    href: ./samples/advanced.md
   expanded: true
+  items:
+    - name: Startfrågor
+      displayName: 'query language, data explorer, count, list, show'
+      href: ./samples/starter.md
+    - name: Avancerade frågor
+      displayName: 'query language, data explorer, list, regex'
+      href: ./samples/advanced.md
 - name: Begrepp
-  items:
-  - name: Förstå frågespråket
-    displayName: query language, data explorer, tabular, operators, functions
-    href: ./concepts/query-language.md
-  - name: Utforska dina Azure-resurser med resursgrafer
-    displayName: vms, public ip
-    href: ./concepts/explore-resources.md
-  - name: Arbeta med stora datamängder
-    displayName: page, first, skip, token
-    href: ./concepts/work-with-data.md
   expanded: true
+  items:
+    - name: Förstå frågespråket
+      displayName: 'query language, data explorer, tabular, operators, functions'
+      href: ./concepts/query-language.md
+    - name: Utforska dina Azure-resurser med resursgrafer
+      displayName: 'vms, public ip'
+      href: ./concepts/explore-resources.md
+    - name: Arbeta med stora datamängder
+      displayName: 'page, first, skip, token'
+      href: ./concepts/work-with-data.md
+- name: Instruktionsguider
+  items:
+    - name: Hämta resursändringar
+      displayName: 'resource, change, history, snapshot, details'
+      href: ./how-to/get-resource-changes.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/ext/resource-graph/graph
-  - name: Azure PowerShell
-    href: /powershell/module/az.resourcegraph/
-  - name: Azure SDK för .NET
-    href: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
-  - name: Azure SDK för Python
-    href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
-  - name: REST
-    href: /rest/api/azureresourcegraph/resources/resources
-  - name: OpenAPI
-    href: https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/preview/2018-09-01-preview
+    - name: Azure CLI
+      href: /cli/azure/ext/resource-graph/graph
+    - name: Azure PowerShell
+      href: /powershell/module/az.resourcegraph/
+    - name: Azure SDK för .NET
+      href: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
+    - name: Azure SDK för Python
+      href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
+    - name: REST
+      href: /rest/api/azureresourcegraph/resources/resources
+    - name: OpenAPI
+      href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/preview/2018-09-01-preview'
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: UserVoice
-    href: https://feedback.azure.com/forums/915958-azure-governance
-  - name: Styrning av YouTube-kanal
-    href: https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ
-ms.openlocfilehash: 9097c3c450eada7d264e5e4c0bfa5eb281cc9601
-ms.sourcegitcommit: 235cd1c4f003a7f8459b9761a623f000dd9e50ef
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/11/2019
-ms.locfileid: "57726710"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: UserVoice
+      href: 'https://feedback.azure.com/forums/915958-azure-governance'
+    - name: Styrning av YouTube-kanal
+      href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
