--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -1,221 +1,210 @@
-items:
 - name: Dokumentation om Azure Machine Learning-tjänsten
   href: index.yml
 - name: Översikt
-  items:
-  - name: Vad är tjänsten Azure Machine Learning?
-    displayName: AML services overview
-    href: overview-what-is-azure-ml.md
-  - name: Vad har hänt med Workbench?
-    displayName: desktop ui Workbench upgrade update transfer
-    href: overview-what-happened-to-workbench.md
   expanded: true
+  items:
+    - name: Vad är tjänsten Azure Machine Learning?
+      displayName: AML services overview
+      href: overview-what-is-azure-ml.md
+    - name: Vad har hänt med Workbench?
+      displayName: desktop ui Workbench upgrade update transfer
+      href: overview-what-happened-to-workbench.md
 - name: Konfiguration
   items:
-  - name: Skapa en arbetsyta
-    displayName: install sdk workspace
-    href: setup-create-workspace.md
+    - name: Skapa en arbetsyta
+      displayName: install sdk workspace
+      href: setup-create-workspace.md
 - name: Snabbstarter
   items:
-  - name: Experimentera med en notebook-fil i molnet
-    displayName: workspace
-    href: quickstart-run-cloud-notebook.md
-  - name: Experimentera med en lokal notebook-fil
-    displayName: workspace, install, sdk
-    href: quickstart-run-local-notebook.md
+    - name: Experimentera med en notebook-fil i molnet
+      displayName: workspace
+      href: quickstart-run-cloud-notebook.md
+    - name: Experimentera med en lokal notebook-fil
+      displayName: 'workspace, install, sdk'
+      href: quickstart-run-local-notebook.md
 - name: Självstudier
   items:
-  - name: Klassificering av avbildning (MNIST-data)
-    items:
-    - name: 1. Träna en modell
-      displayName: build modeling
-      href: tutorial-train-models-with-aml.md
-    - name: 2. Distribuera en modell
-      href: tutorial-deploy-models-with-aml.md
-  - name: Regression (data från taxibilar i New York)
-    items:
-    - name: 1. Förbereda data för modellering
-      displayName: data prep
-      href: tutorial-data-prep.md
-    - name: 2. Träna en maskininlärningsmodell automatiskt
-      displayName: automl, automated, auto ml,
-      href: tutorial-auto-train-models.md
+    - name: Klassificering av avbildning (MNIST-data)
+      items:
+        - name: 1. Träna en modell
+          displayName: build modeling
+          href: tutorial-train-models-with-aml.md
+        - name: 2. Distribuera en modell
+          href: tutorial-deploy-models-with-aml.md
+    - name: Regression (data från taxibilar i New York)
+      items:
+        - name: 1. Förbereda data för modellering
+          displayName: data prep
+          href: tutorial-data-prep.md
+        - name: 2. Träna en maskininlärningsmodell automatiskt
+          displayName: 'automl, automated, auto ml,'
+          href: tutorial-auto-train-models.md
 - name: Exempel
-  displayName: example, examples, Jupyter, azure notebooks, python, notebook, GitHub
+  displayName: 'example, examples, Jupyter, azure notebooks, python, notebook, GitHub'
   href: samples-notebooks.md
 - name: Begrepp
   items:
-  - name: Så här fungerar tjänsten
-    displayName: architecture concepts definitions
-    href: concept-azure-machine-learning-architecture.md
-  - name: Automatiserad maskininlärning
-    displayName: automl, auto ml
-    href: concept-automated-ml.md
-  - name: Modellhantering
-    displayName: deploy, deployment
-    href: concept-model-management-and-deployment.md
-  - name: Modelltolkning
-    displayName: explainability
-    href: machine-learning-interpretability-explainability.md
-  - name: Accelerera med FPGA
-    href: concept-accelerate-with-fpgas.md
-  - name: Pipelines för maskininlärning
-    href: concept-ml-pipelines.md
-  - name: Säkerhet
-    items:
-    - name: Översikt över Enterprise Security
-      displayName: authorization authentication encryption
-      href: concept-enterprise-security.md
-    - name: Hantera användare och roller
-      href: how-to-assign-roles.md
-    - name: Använda virtuella nätverk
-      displayName: vnet
-      href: how-to-enable-virtual-network.md
-    - name: Säkra webbtjänster med SSL
-      href: how-to-secure-web-service.md
+    - name: Så här fungerar tjänsten
+      displayName: architecture concepts definitions
+      href: concept-azure-machine-learning-architecture.md
+    - name: Automatiserad maskininlärning
+      displayName: 'automl, auto ml'
+      href: concept-automated-ml.md
+    - name: Modellhantering
+      displayName: 'deploy, deployment'
+      href: concept-model-management-and-deployment.md
+    - name: Modelltolkning
+      displayName: explainability
+      href: machine-learning-interpretability-explainability.md
+    - name: Accelerera med FPGA
+      href: concept-accelerate-with-fpgas.md
+    - name: Pipelines för maskininlärning
+      href: concept-ml-pipelines.md
+    - name: Säkerhet
+      items:
+        - name: Översikt över Enterprise Security
+          displayName: authorization authentication encryption
+          href: concept-enterprise-security.md
+        - name: Hantera användare och roller
+          href: how-to-assign-roles.md
+        - name: Använda virtuella nätverk
+          displayName: vnet
+          href: how-to-enable-virtual-network.md
+        - name: Säkra webbtjänster med SSL
+          href: how-to-secure-web-service.md
 - name: Instruktionsguider
   items:
-  - name: Hantera arbetsytor
-    items:
-    - name: Använda portalen för arbetsytor
-      href: how-to-manage-workspace.md
-    - name: Använda en Resource Manager-mall
-      href: how-to-create-workspace-template.md
-  - name: Konfigurera utvecklingsmiljön 
-    items:
-    - name: Konfigurera utvecklingsmiljöer
-      displayName: local, remote, azure notebooks, notebook, Jupyter, dsvm, Databricks, ADB
-      href: how-to-configure-environment.md
-    - name: Visual Studio Code-tillägg
-      displayName: Visual Studio Code, VSCode, tools, ai, vs
+    - name: Hantera arbetsytor
       items:
-      - name: Kom igång
-        href: how-to-vscode-tools.md
-      - name: Träna och distribuera
-        href: how-to-vscode-train-deploy.md
-  - name: Arbeta med data
-    displayName: data prep, ETL, ELT, data preparation
-    items:
-    - name: Utforska och förbereda data
-      displayName: data prep, ETL, ELT, data preparation
+        - name: Använda portalen för arbetsytor
+          href: how-to-manage-workspace.md
+        - name: Använda en Resource Manager-mall
+          href: how-to-create-workspace-template.md
+    - name: "Konfigurera utvecklingsmiljön\_"
       items:
-      - name: Läsa in data
-        href: how-to-load-data.md
-      - name: Omvandla data
-        href: how-to-transform-data.md
-      - name: Skrivdata
-        href: how-to-write-data.md
-  - name: Hämta data i datalagret
-    displayName: blob get fileshare access storage
-    href: how-to-access-data.md
-  - name: Inlärningsmodeller
-    items:
-    - name: Konfigurera miljöer för utbildning
-      displayName: compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight
-      href: how-to-set-up-training-targets.md
-    - name: Skapa uppskattningar i utbildning
-      href: how-to-train-ml-models.md
-    - name: Använda PyTorch
-      href: how-to-train-pytorch.md
-    - name: Använda TensorFlow och Keras
-      href: how-to-train-tensorflow.md
-    - name: Justering av hyperparametrar
-      displayName: parameter
-      href: how-to-tune-hyperparameters.md
-  - name: Spåra och övervaka experiment
-    items:
-    - name: Starta, övervaka eller avbryta körningar
-      displayName: cancel, fail, status, child run
-      href: how-to-manage-runs.md
-    - name: Loggmått för träningskörningar
-      href: how-to-track-experiments.md
-  - name: Azure-maskininlärning
-    displayName: automl, auto ml
-    items:
-    - name: Använda automatiserad maskininlärning (Python)
-      displayName: SDK automl
-      href: how-to-configure-auto-train.md
-    - name: Använd fjärrberäkningsmål
-      displayName: automl automated auto ml
-      href: how-to-auto-train-remote.md
-    - name: Träna prognosmodeller automatiskt
-      displayName: time series
-      href: how-to-auto-train-forecast.md
-  - name: ONNX-modeller
-    href: how-to-build-deploy-onnx.md
-  - name: Distribuera modeller
-    items:
-    - name: Var och hur du distribuerar
-      displayName: publish azure kubernetes azure container instances
-      href: how-to-deploy-and-where.md
-    - name: FPGA:er
-      href: how-to-deploy-fpga-web-service.md
-    - name: Felsöka
-      href: how-to-troubleshoot-deployment.md
-  - name: Konsumera webbtjänster
-    items:
-    - name: Använda i realtid
-      displayName: create client consume request response synchronous
-      href: how-to-consume-web-service.md
-    - name: Köra batch-förutsägelser
-      displayName: score scoring asynchronous consume pipeline
-      href: how-to-run-batch-predictions.md
-  - name: Övervaka webbtjänster
-    items:
-    - name: Samla in och utvärdera modelldata
-      displayName: track production
-      href: how-to-enable-data-collection.md
-    - name: Övervaka med Application Insights
-      href: how-to-enable-app-insights.md
-  - name: Skapa din första pipeline
-    href: how-to-create-your-first-pipeline.md
-  - name: Aktivera loggning
-    displayName: logging
-    href: how-to-enable-logging.md
-  - name: Hantera resurskvoter
-    displayName: limits
-    href: how-to-manage-quotas.md
-  - name: Använd CLI för Machine Learning
-    displayName: cli extension command line command-line az ci/cd automate automated
-    href: reference-azure-machine-learning-cli.md
-  - name: Exportera och ta bort data
-    displayName: GDPR
-    href: how-to-export-delete-data.md
+        - name: Konfigurera utvecklingsmiljöer
+          displayName: 'local, remote, azure notebooks, notebook, Jupyter, dsvm, Databricks, ADB'
+          href: how-to-configure-environment.md
+        - name: Använda Visual Studio Code-tillägg
+          displayName: 'Visual Studio Code, VSCode, tools, ai, vs'
+          href: how-to-vscode-tools.md
+    - name: Arbeta med data
+      displayName: 'data prep, ETL, ELT, data preparation'
+      items:
+        - name: Utforska och förbereda data
+          displayName: 'data prep, ETL, ELT, data preparation'
+          items:
+            - name: Läsa in data
+              href: how-to-load-data.md
+            - name: Omvandla data
+              href: how-to-transform-data.md
+            - name: Skrivdata
+              href: how-to-write-data.md
+    - name: Hämta data i datalagret
+      displayName: blob get fileshare access storage
+      href: how-to-access-data.md
+    - name: Inlärningsmodeller
+      items:
+        - name: Konfigurera miljöer för utbildning
+          displayName: 'compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight'
+          href: how-to-set-up-training-targets.md
+        - name: Skapa uppskattningar i utbildning
+          href: how-to-train-ml-models.md
+        - name: Använda PyTorch
+          href: how-to-train-pytorch.md
+        - name: Använda TensorFlow och Keras
+          href: how-to-train-tensorflow.md
+        - name: Justering av hyperparametrar
+          displayName: parameter
+          href: how-to-tune-hyperparameters.md
+    - name: Spåra och övervaka experiment
+      items:
+        - name: 'Starta, övervaka eller avbryta körningar'
+          displayName: 'cancel, fail, status, child run'
+          href: how-to-manage-runs.md
+        - name: Loggmått för träningskörningar
+          href: how-to-track-experiments.md
+    - name: Azure-maskininlärning
+      displayName: 'automl, auto ml'
+      items:
+        - name: Använda automatiserad maskininlärning (Python)
+          displayName: SDK automl
+          href: how-to-configure-auto-train.md
+        - name: Använd fjärrberäkningsmål
+          displayName: automl automated auto ml
+          href: how-to-auto-train-remote.md
+        - name: Träna prognosmodeller automatiskt
+          displayName: time series
+          href: how-to-auto-train-forecast.md
+    - name: ONNX-modeller
+      href: how-to-build-deploy-onnx.md
+    - name: Distribuera modeller
+      items:
+        - name: Var och hur du distribuerar
+          displayName: publish azure kubernetes azure container instances
+          href: how-to-deploy-and-where.md
+        - name: 'FPGA:er'
+          href: how-to-deploy-fpga-web-service.md
+        - name: Felsöka
+          href: how-to-troubleshoot-deployment.md
+    - name: Konsumera webbtjänster
+      items:
+        - name: Använda i realtid
+          displayName: create client consume request response synchronous
+          href: how-to-consume-web-service.md
+        - name: Köra batch-förutsägelser
+          displayName: score scoring asynchronous consume pipeline
+          href: how-to-run-batch-predictions.md
+    - name: Övervaka webbtjänster
+      items:
+        - name: Samla in och utvärdera modelldata
+          displayName: track production
+          href: how-to-enable-data-collection.md
+        - name: Övervaka med Application Insights
+          href: how-to-enable-app-insights.md
+    - name: Skapa din första pipeline
+      href: how-to-create-your-first-pipeline.md
+    - name: Aktivera loggning
+      displayName: logging
+      href: how-to-enable-logging.md
+    - name: Hantera resurskvoter
+      displayName: limits
+      href: how-to-manage-quotas.md
+    - name: Använd CLI för Machine Learning
+      displayName: cli extension command line command-line az ci/cd automate automated
+      href: reference-azure-machine-learning-cli.md
+    - name: Exportera och ta bort data
+      displayName: GDPR
+      href: how-to-export-delete-data.md
 - name: Referens
   items:
-  - name: Maskininlärning SDK
-    displayName: api core package python
-    href: https://aka.ms/aml-sdk
-  - name: SDK för dataförberedelser
-    displayName: api preparation package python
-    href: https://aka.ms/data-prep-sdk
-  - name: Övervaka SDK
-    displayName: api package python monitor
-    href: https://aka.ms/aml-monitoring-sdk
+    - name: Maskininlärning SDK
+      displayName: api core package python
+      href: 'https://aka.ms/aml-sdk'
+    - name: SDK för dataförberedelser
+      displayName: api preparation package python
+      href: 'https://aka.ms/data-prep-sdk'
+    - name: Övervaka SDK
+      displayName: api package python monitor
+      href: 'https://aka.ms/aml-monitoring-sdk'
 - name: Resurser
   items:
-  - name: Viktig information
-    displayName: what's new issues bugs
-    href: azure-machine-learning-release-notes.md
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/machine-learning-services/
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Kända problem
-    displayName: bugs errors troubleshoot
-    href: resource-known-issues.md
-  - name: Användarforum
-    href: https://aka.ms/aml-forum-service
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-machine-learning
-  - name: Jämför våra ML-produkter
-    href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
-    maintainContext: true
-ms.openlocfilehash: 647c949a8f999a34963ddfa49f1df8a1606a1295
-ms.sourcegitcommit: 1c2cf60ff7da5e1e01952ed18ea9a85ba333774c
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/12/2019
-ms.locfileid: "59521775"
+    - name: Viktig information
+      displayName: what's new issues bugs
+      href: azure-machine-learning-release-notes.md
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/machine-learning-services/'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Kända problem
+      displayName: bugs errors troubleshoot
+      href: resource-known-issues.md
+    - name: Användarforum
+      href: 'https://aka.ms/aml-forum-service'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-machine-learning'
+    - name: Jämför våra ML-produkter
+      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
+      maintainContext: true
